crates/ruff_python_parser/tests/snapshots/invalid_syntax@params_non_default_after_default.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/params_non_default_after_default.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..30,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..29,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..24,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..12,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..9,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                        node_index: NodeIndex(None),
                                    },
                                    pattern: None,
                                    annotation: None,
                                    is_context: false,
                                    is_some: false,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 10..12,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                            ParameterWithDefault {
                                range: 14..15,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 14..15,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 14..15,
                                        node_index: NodeIndex(None),
                                    },
                                    pattern: None,
                                    annotation: None,
                                    is_context: false,
                                    is_some: false,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 17..23,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 17..23,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 17..18,
                                        node_index: NodeIndex(None),
                                    },
                                    pattern: None,
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 20..23,
                                                id: Name("int"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    is_context: false,
                                    is_some: false,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    raises: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 26..29,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 26..29,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                    is_asserts_return: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a=10, b, c: int): ...
  |               ^ Syntax Error: Parameter without a default cannot follow a parameter with a default


  |
1 | def foo(a=10, b, c: int): ...
  |                  ^^^^^^ Syntax Error: Parameter without a default cannot follow a parameter with a default
